--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Orbit Controls mit Dämpfung (WebGL Shader)</title>
+  <title>WebGL Shader mit Orbit & Touch</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <style>
     html, body {
       margin: 0;
-      padding: 0;
+      height: 100%;
       overflow: hidden;
       background: black;
-      height: 100%;
     }
     canvas {
+      display: block;
       width: 100vw;
       height: 100vh;
-      display: block;
+      touch-action: none;
       cursor: grab;
     }
     canvas:active {
@@ -25,14 +26,14 @@
 <body>
 <canvas id="glcanvas"></canvas>
 
-<script type="x-shader/x-vertex">
+<script id="vs" type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
 </script>
 
-<script type="x-shader/x-fragment">
+<script id="fs" type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
@@ -55,10 +56,10 @@ float fBox(vec3 p, vec3 b) {
 }
 
 float scene(vec3 p, float time) {
-  float baseSize = 0.3 + 0.08 * sin(time * 0.25);
-  float smallBoxSize = 0.1 + 0.05 * cos(time * 0.17);
-  float sphereRadius = 0.4 + 0.1 * sin(time * 0.19 + 1.0);
-  float translation = 0.25 * sin(time * 0.07);
+  float baseSize = 0.3 + 0.08 * sin(time * 0.5);
+  float smallBoxSize = 0.1 + 0.05 * cos(time * 0.34);
+  float sphereRadius = 0.4 + 0.1 * sin(time * 0.38 + 1.0);
+  float translation = 0.25 * sin(time * 0.15);
 
   vec3 pos = p;
   pos.z += translation;
@@ -67,8 +68,8 @@ float scene(vec3 p, float time) {
   for (int i = 0; i < 6; i++) {
     vec2 absXY = abs(pos.xy) - value;
     pos = vec3(absXY, pos.z);
-    pos = rotationY(time * (0.1 + 0.05 * float(i))) * pos;
-    pos = rotationZ(time * (0.07 + 0.03 * float(i))) * pos;
+    pos = rotationY(time * (0.2 + 0.1 * float(i))) * pos;
+    pos = rotationZ(time * (0.14 + 0.07 * float(i))) * pos;
     value *= 0.9;
   }
 
@@ -128,7 +129,6 @@ void main() {
 </script>
 
 <script>
-// WebGL Setup
 const canvas = document.getElementById('glcanvas');
 const gl = canvas.getContext('webgl');
 if (!gl) alert('WebGL nicht unterstützt');
@@ -141,7 +141,6 @@ function resize() {
 window.addEventListener('resize', resize);
 resize();
 
-// Shader
 function compileShader(type, source) {
   const shader = gl.createShader(type);
   gl.shaderSource(shader, source);
@@ -152,22 +151,21 @@ function compileShader(type, source) {
   }
   return shader;
 }
-const vs = compileShader(gl.VERTEX_SHADER, document.querySelector('script[type="x-shader/x-vertex"]').textContent);
-const fs = compileShader(gl.FRAGMENT_SHADER, document.querySelector('script[type="x-shader/x-fragment"]').textContent);
+
+const vs = compileShader(gl.VERTEX_SHADER, document.getElementById('vs').textContent);
+const fs = compileShader(gl.FRAGMENT_SHADER, document.getElementById('fs').textContent);
 const program = gl.createProgram();
 gl.attachShader(program, vs);
 gl.attachShader(program, fs);
 gl.linkProgram(program);
 gl.useProgram(program);
 
-// Locations
 const posLoc = gl.getAttribLocation(program, 'position');
 const resLoc = gl.getUniformLocation(program, 'resolution');
 const timeLoc = gl.getUniformLocation(program, 'time');
 const camPosLoc = gl.getUniformLocation(program, 'camPos');
 const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
 
-// Fullscreen Quad
 const buffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
 gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
@@ -177,13 +175,12 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Controls mit Dämpfung
+// Orbit Controls
 let theta = Math.PI / 4, phi = Math.PI / 4, radius = 4;
 let thetaTarget = theta, phiTarget = phi, radiusTarget = radius;
 let target = [0, 0, 0];
 
-let dragging = false;
-let panning = false;
+let dragging = false, panning = false;
 let lastX = 0, lastY = 0;
 
 canvas.addEventListener('mousedown', e => {
@@ -204,11 +201,11 @@ canvas.addEventListener('mousemove', e => {
     const panSpeed = 0.005 * radius;
     const camPos = getCamPos();
     const forward = normalize(subtract(target, camPos));
-    const right = normalize(cross(forward, [0, 1, 0]));
+    const right = normalize(cross(forward, [0,1,0]));
     const up = normalize(cross(right, forward));
     target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
   } else {
-    thetaTarget += dx * 0.005; // nicht gespiegelt!
+    thetaTarget += dx * 0.005;
     phiTarget -= dy * 0.005;
     phiTarget = Math.max(0.01, Math.min(Math.PI - 0.01, phiTarget));
   }
@@ -219,6 +216,52 @@ canvas.addEventListener('wheel', e => {
 });
 canvas.addEventListener('contextmenu', e => e.preventDefault());
 
+// Touch Events
+let lastTouch = [];
+canvas.addEventListener('touchstart', e => {
+  e.preventDefault();
+  lastTouch = Array.from(e.touches);
+});
+canvas.addEventListener('touchmove', e => {
+  e.preventDefault();
+  const touches = Array.from(e.touches);
+  if (touches.length === 1 && lastTouch.length === 1) {
+    const dx = touches[0].clientX - lastTouch[0].clientX;
+    const dy = touches[0].clientY - lastTouch[0].clientY;
+    thetaTarget += dx * 0.005;
+    phiTarget -= dy * 0.005;
+    phiTarget = Math.max(0.01, Math.min(Math.PI - 0.01, phiTarget));
+  } else if (touches.length === 2 && lastTouch.length === 2) {
+    const d = dist(touches[0], touches[1]);
+    const ld = dist(lastTouch[0], lastTouch[1]);
+    const deltaZoom = ld - d;
+    radiusTarget += deltaZoom * 0.01;
+    radiusTarget = Math.max(1, Math.min(20, radiusTarget));
+
+    const mid = midpoint(touches[0], touches[1]);
+    const lastMid = midpoint(lastTouch[0], lastTouch[1]);
+    const dx = mid.x - lastMid.x;
+    const dy = mid.y - lastMid.y;
+
+    const panSpeed = 0.005 * radius;
+    const camPos = getCamPos();
+    const forward = normalize(subtract(target, camPos));
+    const right = normalize(cross(forward, [0,1,0]));
+    const up = normalize(cross(right, forward));
+    target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
+  }
+  lastTouch = touches;
+});
+
+function dist(a, b) {
+  const dx = a.clientX - b.clientX;
+  const dy = a.clientY - b.clientY;
+  return Math.sqrt(dx*dx + dy*dy);
+}
+function midpoint(a, b) {
+  return { x: (a.clientX + b.clientX) / 2, y: (a.clientY + b.clientY) / 2 };
+}
+
 function getCamPos() {
   const sinPhi = Math.sin(phi), cosPhi = Math.cos(phi);
   const x = radius * sinPhi * Math.sin(theta);
@@ -228,23 +271,13 @@ function getCamPos() {
 }
 
 // Vektor-Utils
-function add(a,b) { return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
-function subtract(a,b) { return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
-function scale(v,s) { return [v[0]*s, v[1]*s, v[2]*s]; }
-function cross(a,b) {
-  return [
-    a[1]*b[2] - a[2]*b[1],
-    a[2]*b[0] - a[0]*b[2],
-    a[0]*b[1] - a[1]*b[0]
-  ];
-}
-function normalize(v) {
-  const len = Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2);
-  return len > 1e-6 ? scale(v, 1 / len) : [0,0,0];
-}
+function add(a,b){ return [a[0]+b[0],a[1]+b[1],a[2]+b[2]]; }
+function subtract(a,b){ return [a[0]-b[0],a[1]-b[1],a[2]-b[2]]; }
+function scale(v,s){ return [v[0]*s,v[1]*s,v[2]*s]; }
+function cross(a,b){ return [a[1]*b[2]-a[2]*b[1],a[2]*b[0]-a[0]*b[2],a[0]*b[1]-a[1]*b[0]]; }
+function normalize(v){ const l=Math.hypot(...v); return l>1e-6?scale(v,1/l):[0,0,0]; }
 
-function render(time) {
-  // Dämpfung
+function render(t) {
   const damp = 0.1;
   theta += (thetaTarget - theta) * damp;
   phi += (phiTarget - phi) * damp;
@@ -253,9 +286,10 @@ function render(time) {
   const camPos = getCamPos();
 
   gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, time * 0.001);
+  gl.uniform1f(timeLoc, t * 0.0015); // 🎬 leicht schneller!
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
+
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
