--- a/index.html
+++ b/index.html
@@ -1,53 +1,62 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Langsame WebGL Animation mit sanfter Kamera und gedimmtem Licht</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      overflow: hidden;
-      background: black;
-    }
-    canvas {
-      display: block;
-      width: 100vw;
-      height: 100vh;
-      touch-action: none;
-      cursor: grab;
-    }
-    canvas:active {
-      cursor: grabbing;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Shader mit echten Orbit Controls und animierten Parametern</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black;
+    height: 100%;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+  }
+  canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    cursor: grab;
+  }
+  canvas:active {
+    cursor: grabbing;
+  }
+</style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
 
-<script id="vs" type="x-shader/x-vertex">
+<script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
 </script>
 
-<script id="fs" type="x-shader/x-fragment">
+<script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
 uniform vec3 camPos;
 uniform vec3 camTarget;
 
-mat3 rotationY(float a) {
-  float s = sin(a), c = cos(a);
-  return mat3(c, 0, -s, 0, 1, 0, s, 0, c);
+mat3 rotationY(float angle) {
+  float s = sin(angle), c = cos(angle);
+  return mat3(
+    c, 0.0, -s,
+    0.0, 1.0, 0.0,
+    s, 0.0, c
+  );
 }
 
-mat3 rotationZ(float a) {
-  float s = sin(a), c = cos(a);
-  return mat3(c, s, 0, -s, c, 0, 0, 0, 1);
+mat3 rotationZ(float angle) {
+  float s = sin(angle), c = cos(angle);
+  return mat3(
+    c, s, 0.0,
+   -s, c, 0.0,
+    0.0, 0.0, 1.0
+  );
 }
 
 float fBox(vec3 p, vec3 b) {
@@ -56,27 +65,36 @@ float fBox(vec3 p, vec3 b) {
 }
 
 float scene(vec3 p, float time) {
-  float baseSize = 0.3 + 0.02 * sin(time * 0.1);
-  float smallBoxSize = 0.1 + 0.01 * cos(time * 0.068);
-  float sphereRadius = 0.4 + 0.03 * sin(time * 0.076 + 1.0);
-  float translation = 0.25 * sin(time * 0.038);
-
+  // Animierte Parameter (langsamer, unterschiedliche Frequenzen)
+  float baseSize = 0.3 + 0.05 * sin(time * 0.3);
+  float smallBoxSize = 0.1 + 0.03 * cos(time * 0.5);
+  float sphereRadius = 0.4 + 0.07 * sin(time * 0.2 + 1.0);
+  float translation = 0.15 * sin(time * 0.1);
+  
   vec3 pos = p;
+  float value = 1.0;
+
+  // Translation auf der z-Achse animieren
   pos.z += translation;
 
-  float value = 1.0;
+  float valueAnim = value;
   for (int i = 0; i < 6; i++) {
-    vec2 absXY = abs(pos.xy) - value;
+    // Animation der Skalierung über value
+    vec2 absXY = abs(pos.xy) - valueAnim;
     pos = vec3(absXY, pos.z);
-    pos = rotationY(time * (0.04 + 0.02 * float(i))) * pos;
-    pos = rotationZ(time * (0.028 + 0.014 * float(i))) * pos;
-    value *= 0.9;
+    // Unterschiedliche langsame Rotationen
+    pos = rotationY(time * (0.1 + 0.05 * float(i))) * pos;
+    pos = rotationZ(time * (0.07 + 0.03 * float(i))) * pos;
+    valueAnim *= 0.9;
   }
 
-  float d1 = fBox(pos, vec3(baseSize));
-  float d2 = fBox(pos, vec3(smallBoxSize));
+  float box1 = fBox(pos, vec3(baseSize));
+  float box2 = fBox(pos, vec3(smallBoxSize));
+  float d = -box1;
+  d = min(d, box2);
+
   float sphere = length(pos) - sphereRadius;
-  return max(min(-d1, d2), sphere);
+  return max(d, sphere);
 }
 
 vec3 getNormal(vec3 p, float time) {
@@ -96,15 +114,16 @@ void main() {
   vec3 ro = camPos;
   vec3 ta = camTarget;
   vec3 f = normalize(ta - ro);
-  vec3 r = normalize(cross(vec3(0,1,0), f));
+  vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
   vec3 u = cross(f, r);
   vec3 rd = normalize(uv.x * r + uv.y * u + f);
 
   float t = 0.0;
+  float d;
   bool hit = false;
-  for (int i = 0; i < 100; i++) {
+  for(int i = 0; i < 100; i++) {
     vec3 p = ro + rd * t;
-    float d = scene(p, time);
+    d = scene(p, time);
     if (d < 0.001) {
       hit = true;
       break;
@@ -113,42 +132,15 @@ void main() {
     t += d;
   }
 
-  vec3 col = vec3(0);
+  vec3 col = vec3(0.0);
   if (hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p, time);
-
-    // Mehrere gedimmte Punktlichter mit mittlerer Geschwindigkeit (leicht wandernd)
-    vec3 lightPos1 = vec3(2.5 * sin(time * 0.3), 2.0, 2.5 * cos(time * 0.3));
-    vec3 lightPos2 = vec3(2.0 * cos(time * 0.2 + 3.14), 1.8, 2.0 * sin(time * 0.2 + 3.14));
-    vec3 lightPos3 = vec3(1.5 * sin(time * 0.4 + 1.57), 2.5, 1.5 * cos(time * 0.4 + 1.57));
-
-    vec3 lightColor = vec3(0.6, 0.7, 1.0) * 0.4; // gedimmt
-
-    float diff = 0.0;
-    float spec = 0.0;
-    vec3 viewDir = normalize(ro - p);
-
-    // Licht 1
-    vec3 l1 = normalize(lightPos1 - p);
-    float diff1 = max(dot(n, l1), 0.0);
-    float spec1 = pow(max(dot(reflect(-l1, n), viewDir), 0.0), 32.0);
-
-    // Licht 2
-    vec3 l2 = normalize(lightPos2 - p);
-    float diff2 = max(dot(n, l2), 0.0);
-    float spec2 = pow(max(dot(reflect(-l2, n), viewDir), 0.0), 32.0);
-
-    // Licht 3
-    vec3 l3 = normalize(lightPos3 - p);
-    float diff3 = max(dot(n, l3), 0.0);
-    float spec3 = pow(max(dot(reflect(-l3, n), viewDir), 0.0), 32.0);
-
-    diff = diff1 + diff2 + diff3;
-    spec = spec1 + spec2 + spec3;
-
-    col = lightColor * diff + vec3(1.0) * spec * 0.3;
-    col = pow(col, vec3(0.4545)); // Gamma-Korrektur
+    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
+    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+    col = pow(col, vec3(0.4545));
   }
 
   gl_FragColor = vec4(col, 1.0);
@@ -179,12 +171,19 @@ function compileShader(type, source) {
   return shader;
 }
 
-const vs = compileShader(gl.VERTEX_SHADER, document.getElementById('vs').textContent);
-const fs = compileShader(gl.FRAGMENT_SHADER, document.getElementById('fs').textContent);
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
+
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
+
 const program = gl.createProgram();
-gl.attachShader(program, vs);
-gl.attachShader(program, fs);
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
 gl.useProgram(program);
 
 const posLoc = gl.getAttribLocation(program, 'position');
@@ -202,134 +201,132 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Controls
-let theta = Math.PI / 4, phi = Math.PI / 4, radius = 4;
-let thetaTarget = theta, phiTarget = phi, radiusTarget = radius;
-let target = [0, 0, 0];
+// Orbit Controls state:
+let theta = Math.PI/4;  // horizontal angle (around Y)
+let phi = Math.PI/4;    // vertical angle (up/down)
+let radius = 4.0;       // distance from target
+let target = [0,0,0];   // camera target position
 
-let dragging = false, panning = false;
+// Pan offsets
+let panOffset = [0, 0, 0];
+
+// For mouse interaction
+let isDragging = false;
+let isPanning = false;
 let lastX = 0, lastY = 0;
 
-canvas.addEventListener('mousedown', e => {
-  dragging = true;
-  panning = e.button === 2 || e.shiftKey;
+canvas.addEventListener('mousedown', (e) => {
+  isDragging = true;
   lastX = e.clientX;
   lastY = e.clientY;
+  // Rechtsklick oder Shift = Pan
+  isPanning = e.button === 2 || e.shiftKey;
+  e.preventDefault();
 });
-canvas.addEventListener('mouseup', () => dragging = false);
-canvas.addEventListener('mousemove', e => {
-  if (!dragging) return;
-  const dx = e.clientX - lastX;
-  const dy = e.clientY - lastY;
+canvas.addEventListener('mouseup', (e) => {
+  isDragging = false;
+  isPanning = false;
+});
+canvas.addEventListener('mouseleave', (e) => {
+  isDragging = false;
+  isPanning = false;
+});
+
+canvas.addEventListener('mousemove', (e) => {
+  if (!isDragging) return;
+  let dx = e.clientX - lastX;
+  let dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
 
-  if (panning) {
-    const panSpeed = 0.002 * radius;
-    const camPos = getCamPos();
-    const forward = normalize(subtract(target, camPos));
-    const right = normalize(cross(forward, [0,1,0]));
-    const up = normalize(cross(right, forward));
-    target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
+  if (isPanning) {
+    // Pan: verschiebe target parallel zur Kameraebene
+    const panSpeed = 0.005 * radius;
+    // Berechne Kamera-Richtungsbasis für Pan:
+    let up = [0,1,0];
+    let camPos = getCamPos();
+    let forward = normalize(subtractVectors(target, camPos));
+    let right = normalize(cross(forward, up));
+    let camUp = normalize(cross(right, forward));
+    // Verschiebe target:
+    target = addVectors(target,
+      addVectors(
+        scaleVector(right, -dx * panSpeed),
+        scaleVector(camUp, dy * panSpeed)
+      )
+    );
   } else {
-    thetaTarget += dx * 0.002;
-    phiTarget -= dy * 0.002;
-    phiTarget = Math.max(0.01, Math.min(Math.PI - 0.01, phiTarget));
+    // Orbit:
+    const orbitSpeed = 0.005;
+    theta -= dx * orbitSpeed;
+    phi -= dy * orbitSpeed;
+    // Begrenze phi (nicht komplett über Kopf)
+    const eps = 0.01;
+    phi = Math.max(eps, Math.min(Math.PI - eps, phi));
   }
 });
-canvas.addEventListener('wheel', e => {
-  radiusTarget += e.deltaY * 0.0008;
-  radiusTarget = Math.max(1, Math.min(20, radiusTarget));
-});
-canvas.addEventListener('contextmenu', e => e.preventDefault());
 
-// Touch Events
-let lastTouch = [];
-canvas.addEventListener('touchstart', e => {
+canvas.addEventListener('wheel', (e) => {
   e.preventDefault();
-  lastTouch = Array.from(e.touches);
-});
-canvas.addEventListener('touchmove', e => {
-  e.preventDefault();
-  const touches = Array.from(e.touches);
-  if (touches.length === 1 && lastTouch.length === 1) {
-    const dx = touches[0].clientX - lastTouch[0].clientX;
-    const dy = touches[0].clientY - lastTouch[0].clientY;
-    thetaTarget += dx * 0.002;
-    phiTarget -= dy * 0.002;
-    phiTarget = Math.max(0.01, Math.min(Math.PI - 0.01, phiTarget));
-  } else if (touches.length === 2 && lastTouch.length === 2) {
-    const d = dist(touches[0], touches[1]);
-    const ld = dist(lastTouch[0], lastTouch[1]);
-    const deltaZoom = ld - d;
-    radiusTarget += deltaZoom * 0.005;
-    radiusTarget = Math.max(1, Math.min(20, radiusTarget));
-
-    const mid = midpoint(touches[0], touches[1]);
-    const lastMid = midpoint(lastTouch[0], lastTouch[1]);
-    const dx = mid.x - lastMid.x;
-    const dy = mid.y - lastMid.y;
-
-    const panSpeed = 0.002 * radius;
-    const camPos = getCamPos();
-    const forward = normalize(subtract(target, camPos));
-    const right = normalize(cross(forward, [0,1,0]));
-    const up = normalize(cross(right, forward));
-    target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
-  }
-  lastTouch = touches;
+  const zoomSpeed = 0.0015;
+  radius += e.deltaY * zoomSpeed;
+  radius = Math.max(0.5, Math.min(20, radius));
 });
 
-function dist(a, b) {
-  const dx = a.clientX - b.clientX;
-  const dy = a.clientY - b.clientY;
-  return Math.sqrt(dx*dx + dy*dy);
+// Hilfsfunktionen für Vektor:
+
+function subtractVectors(a,b) {
+  return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
 }
-function midpoint(a, b) {
-  return { x: (a.clientX + b.clientX) / 2, y: (a.clientY + b.clientY) / 2 };
+function addVectors(a,b) {
+  return [a[0]+b[0], a[1]+b[1], a[2]+b[2]];
+}
+function scaleVector(v,s) {
+  return [v[0]*s, v[1]*s, v[2]*s];
+}
+function lengthVector(v) {
+  return Math.sqrt(v[0]*v[0]+v[1]*v[1]+v[2]*v[2]);
+}
+function normalize(v) {
+  let len = lengthVector(v);
+  if(len>0.00001) return scaleVector(v, 1/len);
+  return [0,0,0];
+}
+function cross(a,b) {
+  return [
+    a[1]*b[2] - a[2]*b[1],
+    a[2]*b[0] - a[0]*b[2],
+    a[0]*b[1] - a[1]*b[0]
+  ];
 }
 
 function getCamPos() {
-  const sinPhi = Math.sin(phi), cosPhi = Math.cos(phi);
-  const x = radius * sinPhi * Math.sin(theta);
-  const y = radius * cosPhi;
-  const z = radius * sinPhi * Math.cos(theta);
-  return add(target, [x, y, z]);
-}
-
-// Einfache 3D-Perlin-Noise-ähnliche Funktion für sanfte Zufallsschwankung
-function noise(t) {
-  return Math.sin(t * 0.5) * 0.5 + Math.sin(t * 0.7 + 1.3) * 0.3;
+  let sinPhi = Math.sin(phi);
+  let x = radius * sinPhi * Math.sin(theta);
+  let y = radius * Math.cos(phi);
+  let z = radius * sinPhi * Math.cos(theta);
+  return addVectors(target, [x,y,z]);
 }
 
 function render(t) {
-  const time = t * 0.00005; // viel langsamer als vorher
+  gl.viewport(0, 0, canvas.width, canvas.height);
+  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-  // Automatische Rotation: sehr langsam & sanfte Randomwanderung
-  if (!dragging) {
-    thetaTarget += 0.00015 + noise(t * 0.001) * 0.0001;
-    phiTarget += noise(t * 0.0007) * 0.00005;
-  }
-
-  const damp = 0.08; // sanfte Dämpfung, noch langsamer
-  theta += (thetaTarget - theta) * damp;
-  phi += (phiTarget - phi) * damp;
-  radius += (radiusTarget - radius) * damp;
-
-  // Radius minimal nicht zu klein
-  radius = Math.max(1, radius);
-
-  const camPos = getCamPos();
-
+  let camPos = getCamPos();
+  gl.useProgram(program);
   gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, time);
+  gl.uniform1f(timeLoc, t * 0.001);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
 
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
+
 requestAnimationFrame(render);
+
+// Kontextmenü für Rechtsklick deaktivieren, damit Pan mit Rechtsklick funktioniert:
+canvas.addEventListener('contextmenu', e => e.preventDefault());
 </script>
 </body>
 </html>
