--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="de">
+<!DOCTYPE html><html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Shader mit Kamera + Licht</title>
+  <title>Shader mit Orbit Kamera + Auto-Rotation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     html, body {
@@ -25,29 +24,21 @@
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
-
-<script id="vs" type="x-shader/x-vertex">
+<script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
   gl_Position = vec4(position, 1.0);
 }
-</script>
-
-<script id="fs" type="x-shader/x-fragment">
+</script><script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
 uniform float time;
 uniform vec3 camPos;
 uniform vec3 camTarget;
-uniform vec3 lights[10];
 
 mat3 rotationY(float a) {
   float s = sin(a), c = cos(a);
   return mat3(c,0.0,-s, 0.0,1.0,0.0, s,0.0,c);
-}
-mat3 rotationZ(float a) {
-  float s = sin(a), c = cos(a);
-  return mat3(c,s,0.0, -s,c,0.0, 0.0,0.0,1.0);
 }
 
 float fBox(vec3 p, vec3 b) {
@@ -55,33 +46,24 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
 }
 
-float scene(vec3 p, float t) {
-  float b1 = 0.3 + 0.05 * sin(t * 0.1);
-  float b2 = 0.1 + 0.03 * cos(t * 0.15);
-  float tr = 0.15 * sin(t * 0.05);
+float scene(vec3 p) {
+  float b1 = 0.3;
   vec3 q = p;
-  q.z += tr;
-
-  float v = 1.0;
-  for (int i = 0; i < 6; i++) {
-    q = vec3(abs(q.xy) - v, q.z);
-    q = rotationY(t * (0.05 + 0.03 * float(i))) * q;
-    q = rotationZ(t * (0.03 + 0.02 * float(i))) * q;
-    v *= 0.9;
+  for (int i = 0; i < 4; i++) {
+    q = vec3(abs(q.xy) - b1, q.z);
+    q = rotationY(0.5) * q;
+    b1 *= 0.8;
   }
-
-  float d1 = -fBox(q, vec3(b1));
-  float d2 = fBox(q, vec3(b2));
-  return max(min(d1, d2), length(q) - 0.5);
+  return fBox(q, vec3(0.2));
 }
 
-vec3 getNormal(vec3 p, float t) {
+vec3 getNormal(vec3 p) {
   float e = 0.001;
   vec2 h = vec2(e, 0.0);
   return normalize(vec3(
-    scene(p + h.xyy, t) - scene(p - h.xyy, t),
-    scene(p + h.yxy, t) - scene(p - h.yxy, t),
-    scene(p + h.yyx, t) - scene(p - h.yyx, t)
+    scene(p + h.xyy) - scene(p - h.xyy),
+    scene(p + h.yxy) - scene(p - h.yxy),
+    scene(p + h.yyx) - scene(p - h.yyx)
   ));
 }
 
@@ -94,14 +76,14 @@ void main() {
   vec3 f = normalize(ta - ro);
   vec3 r = normalize(cross(vec3(0,1,0), f));
   vec3 u = cross(f, r);
-  vec3 rd = normalize(uv.x * r + uv.y * u + f);
+  vec3 rd = normalize(uv.x*r + uv.y*u + f);
 
   float t = 0.0;
   float d;
   bool hit = false;
-  for(int i = 0; i < 100; i++) {
+  for (int i = 0; i < 100; i++) {
     vec3 p = ro + rd * t;
-    d = scene(p, time);
+    d = scene(p);
     if (d < 0.001) {
       hit = true;
       break;
@@ -110,174 +92,119 @@ void main() {
     t += d;
   }
 
-  vec3 col = vec3(0.0);
+  vec3 col = vec3(0);
   if (hit) {
     vec3 p = ro + rd * t;
-    vec3 n = getNormal(p, time);
-    vec3 viewDir = normalize(ro - p);
-    float fresnel = pow(1.0 - max(dot(n, viewDir), 0.0), 2.0);
-
-    for (int i = 0; i < 10; i++) {
-      vec3 lightDir = normalize(lights[i] - p);
-      float diff = clamp(dot(n, lightDir), 0.0, 1.0);
-      float spec = pow(clamp(dot(reflect(-lightDir, n), viewDir), 0.0, 1.0), 32.0);
-      col += (diff * vec3(0.3,0.4,0.5) + spec * vec3(1.0)) * 0.08;  // gedimmt
-    }
-
-    col += fresnel * vec3(0.2, 0.3, 0.4); // fresnel reflex
+    vec3 n = getNormal(p);
+    vec3 lightDir = normalize(vec3(0.5, 1.0, 0.3));
+    float diff = max(dot(n, lightDir), 0.0);
+    float spec = pow(max(dot(reflect(-lightDir, n), -rd), 0.0), 32.0);
+    col = vec3(0.3, 0.5, 0.8) * diff + vec3(1.0) * spec * 0.2;
     col = pow(col, vec3(0.4545));
   }
 
   gl_FragColor = vec4(col, 1.0);
 }
-</script>
-
-<script>
+</script><script>
 const canvas = document.getElementById('glcanvas');
 const gl = canvas.getContext('webgl');
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
-  gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
+  gl.viewport(0, 0, canvas.width, canvas.height);
 }
 window.addEventListener('resize', resize);
 resize();
 
-function compile(type, src) {
-  const s = gl.createShader(type);
-  gl.shaderSource(s, src);
-  gl.compileShader(s);
-  if (!gl.getShaderParameter(s, gl.COMPILE_STATUS))
-    throw new Error(gl.getShaderInfoLog(s));
-  return s;
+function compileShader(type, source) {
+  const shader = gl.createShader(type);
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    console.error(gl.getShaderInfoLog(shader));
+    return null;
+  }
+  return shader;
 }
 
-const vs = compile(gl.VERTEX_SHADER, document.getElementById('vs').textContent);
-const fs = compile(gl.FRAGMENT_SHADER, document.getElementById('fs').textContent);
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
 
+const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
 const program = gl.createProgram();
-gl.attachShader(program, vs);
-gl.attachShader(program, fs);
+
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
 gl.useProgram(program);
 
-// Attributes & Buffers
 const posLoc = gl.getAttribLocation(program, 'position');
-const buf = gl.createBuffer();
-gl.bindBuffer(gl.ARRAY_BUFFER, buf);
-gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-  -1,-1,0, 1,-1,0, -1,1,0,
-  -1,1,0, 1,-1,0, 1,1,0
-]), gl.STATIC_DRAW);
-gl.enableVertexAttribArray(posLoc);
-gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
-
-// Uniforms
 const resLoc = gl.getUniformLocation(program, 'resolution');
 const timeLoc = gl.getUniformLocation(program, 'time');
 const camPosLoc = gl.getUniformLocation(program, 'camPos');
 const camTargetLoc = gl.getUniformLocation(program, 'camTarget');
-const lightsLoc = gl.getUniformLocation(program, 'lights');
 
-// Kamera-State
-let theta = Math.PI / 4;
-let phi = Math.PI / 4;
+const buffer = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
+  -1, -1, 0, 1, -1, 0, -1, 1, 0,
+  -1, 1, 0, 1, -1, 0, 1, 1, 0
+]), gl.STATIC_DRAW);
+
+gl.enableVertexAttribArray(posLoc);
+gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
+
+// Orbit Kamera
+let theta = 0.5;
+let phi = 1.0;
 let radius = 4.0;
 let target = [0, 0, 0];
-let isDragging = false;
-let isPanning = false;
-let lastX = 0, lastY = 0;
 
-// Maussteuerung
+let isDragging = false;
+let lastX = 0, lastY = 0;
 canvas.addEventListener('mousedown', e => {
   isDragging = true;
   lastX = e.clientX;
   lastY = e.clientY;
-  isPanning = e.button === 2 || e.shiftKey;
 });
 canvas.addEventListener('mouseup', () => isDragging = false);
-canvas.addEventListener('mouseleave', () => isDragging = false);
 canvas.addEventListener('mousemove', e => {
   if (!isDragging) return;
-  const dx = e.clientX - lastX;
-  const dy = e.clientY - lastY;
+  let dx = e.clientX - lastX;
+  let dy = e.clientY - lastY;
   lastX = e.clientX;
   lastY = e.clientY;
-
-  if (isPanning) {
-    const panSpeed = 0.005 * radius;
-    let cam = getCamPos();
-    let forward = normalize(sub(target, cam));
-    let right = normalize(cross(forward, [0, 1, 0]));
-    let up = normalize(cross(right, forward));
-    target = add(target, add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed)));
-  } else {
-    const rotSpeed = 0.005;
-    theta -= dx * rotSpeed;
-    phi -= dy * rotSpeed;
-    phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
-  }
+  theta -= dx * 0.005;
+  phi -= dy * 0.005;
+  phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
 });
 canvas.addEventListener('wheel', e => {
-  e.preventDefault();
-  radius += e.deltaY * 0.002;
-  radius = Math.max(1, Math.min(20, radius));
+  radius += e.deltaY * 0.01;
+  radius = Math.max(1.0, Math.min(20.0, radius));
 });
-canvas.addEventListener('contextmenu', e => e.preventDefault());
 
-// Vector math
-function add(a,b){return a.map((v,i)=>v+b[i]);}
-function sub(a,b){return a.map((v,i)=>v-b[i]);}
-function scale(v,s){return v.map(x=>x*s);}
-function cross(a,b){
-  return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]];
-}
-function normalize(v){
-  const len = Math.sqrt(v.reduce((s,x)=>s+x*x,0));
-  return len > 0.0001 ? v.map(x=>x/len) : [0,0,0];
-}
-function getCamPos() {
-  const sinPhi = Math.sin(phi);
-  const x = radius * sinPhi * Math.sin(theta);
-  const y = radius * Math.cos(phi);
-  const z = radius * sinPhi * Math.cos(theta);
-  return add(target, [x, y, z]);
+function getCamPos(t) {
+  let autoTheta = theta + t * 0.0001; // langsame Rotation
+  let x = radius * Math.sin(phi) * Math.sin(autoTheta);
+  let y = radius * Math.cos(phi);
+  let z = radius * Math.sin(phi) * Math.cos(autoTheta);
+  return [x + target[0], y + target[1], z + target[2]];
 }
 
-// Random Pointlights
-function getLights(t) {
-  const lights = [];
-  for (let i = 0; i < 10; i++) {
-    lights.push([
-      Math.sin(t * 0.1 + i) * 2.5,
-      Math.sin(t * 0.07 + i * 0.3) * 1.5,
-      Math.cos(t * 0.1 + i * 0.5) * 2.5
-    ]);
-  }
-  return lights.flat();
-}
+function render(t) {
+  let camPos = getCamPos(t);
 
-// Renderloop
-function render(now) {
-  const t = now * 0.001;
-  gl.viewport(0, 0, gl.canvas.width, gl.canvas.height);
+  gl.viewport(0, 0, canvas.width, canvas.height);
   gl.clear(gl.COLOR_BUFFER_BIT);
   gl.useProgram(program);
-
-  // Auto-Rotation
-  theta += 0.0005;
-
-  const cam = getCamPos();
-  gl.uniform2f(resLoc, gl.canvas.width, gl.canvas.height);
-  gl.uniform1f(timeLoc, t);
-  gl.uniform3fv(camPosLoc, cam);
+  gl.uniform2f(resLoc, canvas.width, canvas.height);
+  gl.uniform1f(timeLoc, t * 0.001);
+  gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, target);
-  gl.uniform3fv(lightsLoc, new Float32Array(getLights(t)));
-
   gl.drawArrays(gl.TRIANGLES, 0, 6);
   requestAnimationFrame(render);
 }
 requestAnimationFrame(render);
-</script>
-</body>
+</script></body>
 </html>
